# safe-travels

./: .gitignore  CLAUDE.md  DANGER_IMPROVEMENTS.md  LICENSE  README.md  danger_assessment.py  decode_polyline.py  hello.py  map.py  pyproject.toml  requirements.txt  routing.py  safe_travels.py  save_travels.py  server.py  weather.py
docs/: cool_run.txt  weather.json
tests/: test_danger_assessment.py  test_routing.py  test_server.py
