[project]
name = "safe-travels"
version = "0.1.0"
description = "MCP server for assessing weather-related danger on driving routes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp",
    "polyline",
    "requests",
    "python-dateutil",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
]

[project.scripts]
safe-travels = "server:mcp.run"

[tool.ruff.format]
quote-style = "single"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]
